@@ -1,5 +1,3 @@
-math pri on
-math round off
 namespace nested off
 
 ; Macros to load files easily.
